# iustZ

./: .gitignore  APprojectitemsclasses.cpp  CMakeLists.txt  CONTRIBUTING.md  Character.cpp  Character.h  Function_of_Cout.cpp  Item.cpp  LICENSE  Maincharacter.cpp  README.md  Shop.cpp  test.cpp  weapon&character.cpp  weaponANDcharacter.cpp
APfirstproject/: The_main.cpp  main&funcsContainer.cpp  main_funcsContainer.cpp  tempCodeRunnerFile.cpp
APfirstproject/Headers/: Batarang.cpp  Blaster.cpp  ColdWeapon.cpp  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  HUMAN.cpp  HUMAN.h  HotWeapon.cpp  Katana.cpp  MainCharacter.cpp  PermenantWeapon.cpp  PermenantWeapon.h  Shop.cpp  Shop.h  UseableItems.cpp  WheyProtein.h  Zombie.cpp  Zombie.h  grenade.cpp  human.cpp  human.h  oevikpcl.cpp
Final/: The_main.cpp  tempCodeRunnerFile.cpp
Final/Headers/: ColdWeapon.cpp  Enemy.h  EnemyFactory.h  MiniGun.h  Mjolnir.h  RocketLauncher.h  Shop.cpp  XPpotion.h
Final/data/: 1.txt  3.txt  Erfan.txt  Pouria.txt  Saeed.txt  Souroosh.txt  amin.txt  gaav.txt  kaka.txt  quqe.txt  sag.txt  soroush.txt  users.txt  wwe.txt
Headers/: Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Items.cpp  MainCharacter.cpp  MainCharacter.h  PermenantWeapon.cpp  PermenantWeapon.h  Shop.cpp  Shop.h  ThrowableWeapon.cpp  ThrowableWeapon.h  UseableItems.cpp  UseableItems.h  Weapon.cpp  Weapon.h  Zombie.cpp  Zombie.h  all.cpp  all.h
Improved/: The_main.cpp  tempCodeRunnerFile.cpp
Improved/Headers/: Batarang.h  ColdWeapon.h  Egg.h  Enemy.cpp  EnemyFactory.cpp  EnemyFactory.h  HotWeapon.h  Items.h  Katana.h  MainCharacter.cpp  MainCharacter.h  Shop.cpp  UseableItems.h  XPpotion.cpp  Zombie.cpp  human.cpp  shuriken.cpp
Improved/data/: Pooria.txt  hamid.txt  hamidreza.txt  nana.txt  opo.txt  saeed.txt  users.txt  www.txt
archive/APfirstproject/: The_main.cpp
archive/APfirstproject/Headers/: Blaster.cpp  MainCharacter.h  ThrowableWeapon.cpp  UseableItems.h  Zombie.cpp  grenade.h
archive/Improved/: The_main.cpp
src/: EnemyStats.cpp  EnemyStats.h  GameEngine.cpp  GameEngine.h  SaveSystem.cpp  SaveSystem.h  The_main.cpp
src/Headers/: ConsoleUI.cpp  ConsoleUI.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  EnergyDrink.h  InventoryFactory.cpp  InventoryFactory.h  Katana.cpp  KratosBlades.cpp  KratosBlades.h  MainCharacter.cpp  MainCharacter.h  MiniGun.cpp  Mjolnir.cpp  Shop.cpp  Shop.h  Spear.cpp  UseableItems.cpp  UseableItems.h  Weapon.h  Zombie.cpp  Zombie.h  human.cpp  human.h
src/data/: 2.txt  4.txt  Pouria.txt  Saeed.txt  Saeedw.txt  Soroosh.txt  Sourooshw.txt  kazem.txt
src_gui/: main_gui.cpp
(+16 files in other folders)
